Test ios-static build on CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,9 +43,9 @@ jobs:
       # Install dependencies.
       - run: brew install cmake
       # Build test app variants. Use simulator target to bypass codesigning.
-      - run: make ios-sim BUILD_TYPE=Debug
-      - run: make ios-static-sim BUILD_TYPE=Debug
-      - run: make ios-swift-sim BUILD_TYPE=Debug
+      #- run: make ios-sim BUILD_TYPE=Debug
+      - run: make ios-static BUILD_TYPE=Debug
+      #- run: make ios-swift-sim BUILD_TYPE=Debug
   build-deploy-ios-snapshot:
     macos:
       xcode: "11.4.1"
