--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,14 +34,12 @@ jobs:
   build-ios:
     macos:
       xcode: "11.4.1"
-    environment:
-      HOMEBREW_NO_AUTO_UPDATE: 1
     steps:
       # Check out repository with submodules.
       - checkout
       - run: git submodule update --init
       # Install dependencies.
-      - run: brew install cmake
+      - run: source .circleci/install-cmake-macos.sh
       # Build test app variants. Use simulator target to bypass codesigning.
       - run: make ios-sim BUILD_TYPE=Debug
       - run: make ios-static-sim BUILD_TYPE=Debug
