--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,15 +47,13 @@ jobs:
   build-deploy-ios-snapshot:
     macos:
       xcode: "11.4.1"
-    environment:
-      HOMEBREW_NO_AUTO_UPDATE: 1
     steps:
       # Check out repository with submodules.
       - checkout
       - run: git submodule update --init
       # Install dependencies.
       - run: sudo gem install jazzy --no-document --version 0.10.0
-      - run: brew install cmake
+      - run: source .circleci/install-cmake-macos.sh
       # Build the framework and package it into pod.zip.
       - run: make ios-framework-universal BUILD_TYPE=Release
       # Check that bitcode is included for required archs.
@@ -75,14 +73,12 @@ jobs:
   build-deploy-macos-snapshot:
     macos:
       xcode: "11.4.1"
-    environment:
-      HOMEBREW_NO_AUTO_UPDATE: 1
     steps:
       # Check out repository with submodules.
       - checkout
       - run: git submodule update --init
       # Install dependencies.
-      - run: brew install cmake
+      - run: source .circleci/install-cmake-macos.sh
       # Build the MacOS demo app and package it into demo.zip
       - run: make osx -j 2 MACOSX_DEPLOYMENT_TARGET=10.10.0
       # To produce the intended structure within the zip archive, we must cd to each file's location.
@@ -100,7 +96,8 @@ jobs:
       - run: git submodule update --init
       # Install dependencies.
       - run: sudo gem install jazzy --no-document --version 0.10.0
-      - run: brew install cmake jfrog-cli-go
+      - run: brew install jfrog-cli-go
+      - run: source .circleci/install-cmake-macos.sh
       # Build the framework in release mode and package it into pod.zip
       - run: make ios-framework-universal BUILD_TYPE=Release
       # Check that bitcode is included for required archs.
