--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,8 +34,9 @@ jobs:
   build-ios:
     macos:
       xcode: "11.7.0"
-    environment:
+    environment: # Disable some unnecessary homebrew operations to save time.
       HOMEBREW_NO_AUTO_UPDATE: 1
+      HOMEBREW_NO_INSTALL_CLEANUP: 1
     steps:
       # Check out repository with submodules.
       - checkout
@@ -49,8 +50,9 @@ jobs:
   build-deploy-ios-snapshot:
     macos:
       xcode: "11.7.0"
-    environment:
+    environment: # Disable some unnecessary homebrew operations to save time.
       HOMEBREW_NO_AUTO_UPDATE: 1
+      HOMEBREW_NO_INSTALL_CLEANUP: 1
     steps:
       # Check out repository with submodules.
       - checkout
@@ -77,8 +79,9 @@ jobs:
   build-deploy-macos-snapshot:
     macos:
       xcode: "11.7.0"
-    environment:
+    environment: # Disable some unnecessary homebrew operations to save time.
       HOMEBREW_NO_AUTO_UPDATE: 1
+      HOMEBREW_NO_INSTALL_CLEANUP: 1
     steps:
       # Check out repository with submodules.
       - checkout
@@ -94,8 +97,9 @@ jobs:
   build-deploy-ios-release:
     macos:
       xcode: "11.7.0"
-    environment:
+    environment: # Disable some unnecessary homebrew operations to save time.
       HOMEBREW_NO_AUTO_UPDATE: 1
+      HOMEBREW_NO_INSTALL_CLEANUP: 1
     steps:
       # Check out repository with submodules.
       - checkout
