Update macOS CI images (#2198)
* Update macOS CI images to Xcode 11.7.0

* Disable homebrew install cleanup on CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,10 @@ jobs:
       - run: cd platforms/android && ./gradlew uploadArchives
   build-ios:
     macos:
-      xcode: "11.4.1"
-    environment:
+      xcode: "11.7.0"
+    environment: # Disable some unnecessary homebrew operations to save time.
       HOMEBREW_NO_AUTO_UPDATE: 1
+      HOMEBREW_NO_INSTALL_CLEANUP: 1
     steps:
       # Check out repository with submodules.
       - checkout
@@ -48,9 +49,10 @@ jobs:
       - run: make ios-swift-sim BUILD_TYPE=Debug
   build-deploy-ios-snapshot:
     macos:
-      xcode: "11.4.1"
-    environment:
+      xcode: "11.7.0"
+    environment: # Disable some unnecessary homebrew operations to save time.
       HOMEBREW_NO_AUTO_UPDATE: 1
+      HOMEBREW_NO_INSTALL_CLEANUP: 1
     steps:
       # Check out repository with submodules.
       - checkout
@@ -76,9 +78,10 @@ jobs:
           path: ~/pod.zip
   build-deploy-macos-snapshot:
     macos:
-      xcode: "11.4.1"
-    environment:
+      xcode: "11.7.0"
+    environment: # Disable some unnecessary homebrew operations to save time.
       HOMEBREW_NO_AUTO_UPDATE: 1
+      HOMEBREW_NO_INSTALL_CLEANUP: 1
     steps:
       # Check out repository with submodules.
       - checkout
@@ -93,9 +96,10 @@ jobs:
           path: ~/demo.zip
   build-deploy-ios-release:
     macos:
-      xcode: "11.4.1"
-    environment:
+      xcode: "11.7.0"
+    environment: # Disable some unnecessary homebrew operations to save time.
       HOMEBREW_NO_AUTO_UPDATE: 1
+      HOMEBREW_NO_INSTALL_CLEANUP: 1
     steps:
       # Check out repository with submodules.
       - checkout
