--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,16 @@
-version: 2
+version: 2.1
+executors:
+  android-executor:
+    docker:
+      - image: circleci/android:api-28-ndk
+    environment:
+      GRADLE_OPTS: -Xmx2048m
+  macos-executor:
+    macos:
+      xcode: "11.7.0"
+    environment: # Disable some unnecessary homebrew operations to save time.
+      HOMEBREW_NO_AUTO_UPDATE: 1
+      HOMEBREW_NO_INSTALL_CLEANUP: 1
 jobs:
   build-test-linux:
     docker:
@@ -14,29 +26,19 @@ jobs:
           path: ~/test-results
       - run: source scripts/run_bench.sh build/linux
   build-android:
-    docker:
-      - image: circleci/android:api-28-ndk
-    environment:
-      GRADLE_OPTS: -Xmx2048m
+    executor: android-executor
     steps:
       - checkout
       - run: git submodule update --init
       - run: cd platforms/android && ./gradlew demo:assembleDebug -Ptangram.abis=armeabi-v7a
   build-deploy-android-snapshot:
-    docker:
-      - image: circleci/android:api-28-ndk
-    environment:
-      GRADLE_OPTS: -Xmx2048m
+    executor: android-executor
     steps:
       - checkout
       - run: git submodule update --init
       - run: cd platforms/android && ./gradlew uploadArchives
   build-ios:
-    macos:
-      xcode: "11.7.0"
-    environment: # Disable some unnecessary homebrew operations to save time.
-      HOMEBREW_NO_AUTO_UPDATE: 1
-      HOMEBREW_NO_INSTALL_CLEANUP: 1
+    executor: macos-executor
     steps:
       # Check out repository with submodules.
       - checkout
@@ -48,11 +50,7 @@ jobs:
       - run: make ios-static-sim BUILD_TYPE=Debug
       - run: make ios-swift-sim BUILD_TYPE=Debug
   build-deploy-ios-snapshot:
-    macos:
-      xcode: "11.7.0"
-    environment: # Disable some unnecessary homebrew operations to save time.
-      HOMEBREW_NO_AUTO_UPDATE: 1
-      HOMEBREW_NO_INSTALL_CLEANUP: 1
+    executor: macos-executor
     steps:
       # Check out repository with submodules.
       - checkout
@@ -77,11 +75,7 @@ jobs:
       - store_artifacts:
           path: ~/pod.zip
   build-deploy-macos-snapshot:
-    macos:
-      xcode: "11.7.0"
-    environment: # Disable some unnecessary homebrew operations to save time.
-      HOMEBREW_NO_AUTO_UPDATE: 1
-      HOMEBREW_NO_INSTALL_CLEANUP: 1
+    executor: macos-executor
     steps:
       # Check out repository with submodules.
       - checkout
@@ -95,11 +89,7 @@ jobs:
       - store_artifacts:
           path: ~/demo.zip
   build-deploy-ios-release:
-    macos:
-      xcode: "11.7.0"
-    environment: # Disable some unnecessary homebrew operations to save time.
-      HOMEBREW_NO_AUTO_UPDATE: 1
-      HOMEBREW_NO_INSTALL_CLEANUP: 1
+    executor: macos-executor
     steps:
       # Check out repository with submodules.
       - checkout
