--- a/platforms/android/demo/build.gradle
+++ b/platforms/android/demo/build.gradle
@@ -30,7 +30,8 @@ android {
 }
 
 dependencies {
+  implementation 'androidx.appcompat:appcompat:1.2.0'
+  implementation 'androidx.annotation:annotation'
   implementation 'com.squareup.okio:okio:2.1.0'
   implementation project(path: ':tangram')
-  implementation 'com.android.support:design:28.0.0'
 }
