Update Android publishing script to use 'maven-publish' plugin

--- a/platforms/android/tangram/gradle.properties
+++ b/platforms/android/tangram/gradle.properties
@@ -7,14 +7,14 @@ POM_NAME=Tangram ES
 POM_PACKAGING=aar
 POM_DESCRIPTION=Tangram Android SDK
 
-POM_URL=http://github.com/tangrams/tangram-es
-POM_SCM_URL=http://github.com/tangrams/tangram-es
-POM_SCM_CONNECTION=scm:git:git://github.com/tangrams/tangram-es.git
+POM_URL=https://github.com/tangrams/tangram-es
+POM_SCM_URL=https://github.com/tangrams/tangram-es
+POM_SCM_CONNECTION=scm:git:https://github.com/tangrams/tangram-es.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/tangrams/tangram-es.git
 
-POM_LICENCE_NAME=The MIT License (MIT)
-POM_LICENCE_URL=http://opensource.org/licenses/MIT
-POM_LICENCE_DIST=repo
+POM_LICENSE_NAME=The MIT License (MIT)
+POM_LICENSE_URL=https://opensource.org/licenses/MIT
+POM_LICENSE_DIST=repo
 
 POM_DEVELOPER_ID=Mapzen
 POM_DEVELOPER_NAME=Mapzen
