Update CI script with new Gradle publishing task

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
     steps:
       - checkout
       - run: git submodule update --init
-      - run: cd platforms/android && ./gradlew uploadArchives
+      - run: cd platforms/android && ./gradlew publish
   build-ios:
     executor: macos-executor
     steps:
