Use BuildConfig field to set global logcat tag

--- a/platforms/android/tangram/build.gradle
+++ b/platforms/android/tangram/build.gradle
@@ -22,6 +22,7 @@ android {
     versionCode buildVersionCode()
     versionName VERSION_NAME
     consumerProguardFiles 'tangram-proguard-rules.txt'
+    buildConfigField 'String', 'TAG', '"Tangram"'
     externalNativeBuild {
       cmake {
         targets 'tangram'
