Fix make ios-xcode

--- a/core/deps/CMakeLists.txt
+++ b/core/deps/CMakeLists.txt
@@ -65,7 +65,8 @@ if (TANGRAM_MBTILES_DATASOURCE)
   set(SQLITECPP_RUN_CPPLINT OFF CACHE BOOL "")
   set(SQLITECPP_RUN_CPPCHECK OFF CACHE BOOL "")
   set(SQLITE_ENABLE_COLUMN_METADATA OFF CACHE BOOL "")
-
+  set(CMAKE_THREAD_LIBS_INIT "-lpthread")
+  
   if (TANGRAM_USE_SYSTEM_SQLITE_LIBS)
     set(SQLITECPP_INTERNAL_SQLITE OFF CACHE BOOL "")
   endif()
