Faster macOS CI builds (#2180)
* Run macOS build on every push using Ninja

* macOS CI build using Debug config

* macOS CI build use font packages from brew

* Revert "macOS CI build use font packages from brew"

This reverts commit de427681aeaad1c67b4e898273ef94d3406601e6.

* Use system sqlite in macOS build

* Use ccache with CircleCI caching for macOS builds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,16 +84,25 @@ jobs:
             - run: brew install gh
             - run: mv ~/pod.zip ~/tangram-ios-<< pipeline.git.tag >>.zip
             - run: gh release upload << pipeline.git.tag >> ~/tangram-ios-<< pipeline.git.tag >>.zip
-  build-deploy-macos:
+  build-macos:
     executor: macos-executor
     steps:
       # Check out repository with submodules.
       - checkout
       - run: git submodule update --init
       # Install dependencies.
-      - run: brew install cmake
+      - run: brew install cmake ninja ccache
+      - restore_cache:
+          keys:
+            - macos-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
+            - macos-ccache-v1-{{ .Branch }}
+            - macos-ccache-v1
       # Build the MacOS demo app and package it into demo.zip
-      - run: make osx -j 2 MACOSX_DEPLOYMENT_TARGET=10.10.0
+      - run: make osx MACOSX_DEPLOYMENT_TARGET=10.10.0 BUILD_TYPE=Debug CMAKE_OPTIONS="-DCMAKE_CXX_COMPILER_LAUNCHER=ccache -GNinja"
+      - save_cache:
+          key: macos-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - ~/Library/Caches/ccache
       # To produce the intended structure within the zip archive, we must cd to each file's location.
       - run: cd build/osx && zip -r ~/demo.zip tangram.app
       - store_artifacts:
@@ -104,6 +113,7 @@ workflows:
     jobs:
       # Run on all pushes
       - build-test-linux
+      - build-macos
       # Run on pushes to all branches except main
       - build-android:
           filters:
@@ -115,10 +125,6 @@ workflows:
               ignore: main
       # Run on pushes to main
       - build-deploy-android:
-          filters:
-            branches:
-              only: main
-      - build-deploy-macos:
           filters:
             branches:
               only: main
