--- a/platforms/android/tangram/build.gradle
+++ b/platforms/android/tangram/build.gradle
@@ -47,7 +47,9 @@ android {
                  '-Wno-nested-anon-types',
                  '-Wno-unused-command-line-argument', // for -Wl linker flags..
                  '-Wno-unknown-warning-option'
-
+        if (project.findProperty('tangram.ccache')) {
+          arguments += '-DCMAKE_CXX_COMPILER_LAUNCHER=ccache'
+        }
         if (abi == 'all') {
           abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
         } else {
