--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,24 @@ jobs:
     steps:
       - checkout
       - run: git submodule update --init
-      - run: apt-get update && apt-get install -y wget
-      - run: make cmake-linux CMAKE_OPTIONS="-DTANGRAM_USE_SYSTEM_FONT_LIBS=1 -DTANGRAM_USE_SYSTEM_GLFW_LIBS=1 -DTANGRAM_BUILD_TESTS=1 -DTANGRAM_BUILD_BENCHMARKS=1 -GNinja"
+      - run: apt-get update && apt-get install -y ccache
+      - restore_cache:
+          keys:
+            - linux-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
+            - linux-ccache-v1-{{ .Branch }}
+            - linux-ccache-v1
+      - run: |
+          cmake -H. -Bbuild/linux -GNinja \
+          -DTANGRAM_USE_SYSTEM_FONT_LIBS=1 \
+          -DTANGRAM_USE_SYSTEM_GLFW_LIBS=1 \
+          -DTANGRAM_BUILD_TESTS=1 \
+          -DTANGRAM_BUILD_BENCHMARKS=1 \
+          -DCMAKE_CXX_COMPILER_LAUNCHER=ccache 
       - run: ninja -C build/linux -j 4
+      - save_cache:
+          key: linux-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - ~/.ccache
       - run: source scripts/run_tests.sh build/linux ~/test-results/catch
       - store_test_results:
           path: ~/test-results
