--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
             - linux-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
             - linux-ccache-v1-{{ .Branch }}
             - linux-ccache-v1
+      - run: ccache --zero-stats
       - run: |
           cmake -H. -Bbuild/linux -GNinja \
           -DTANGRAM_USE_SYSTEM_FONT_LIBS=1 \
@@ -32,6 +33,7 @@ jobs:
           -DTANGRAM_BUILD_BENCHMARKS=1 \
           -DCMAKE_CXX_COMPILER_LAUNCHER=ccache 
       - run: ninja -C build/linux -j 4
+      - run: ccache --show-stats
       - save_cache:
           key: linux-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -51,7 +53,9 @@ jobs:
             - android-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
             - android-ccache-v1-{{ .Branch }}
             - android-ccache-v1
+      - run: ccache --zero-stats
       - run: cd platforms/android && ./gradlew demo:assembleDebug -Ptangram.abis=armeabi-v7a -Ptangram.ccache=true
+      - run: ccache --show-stats
       - save_cache:
           key: android-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
@@ -137,8 +141,10 @@ jobs:
             - macos-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
             - macos-ccache-v1-{{ .Branch }}
             - macos-ccache-v1
+      - run: ccache --zero-stats
       # Build the MacOS demo app and package it into demo.zip
       - run: make osx MACOSX_DEPLOYMENT_TARGET=10.10.0 BUILD_TYPE=Debug CMAKE_OPTIONS="-DCMAKE_CXX_COMPILER_LAUNCHER=ccache -GNinja"
+      - run: ccache --show-stats
       - save_cache:
           key: macos-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
           paths:
