Build ARMv8 for 'build-android' job on CircleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
             - android-ccache-v1-{{ .Branch }}
             - android-ccache-v1
       - run: ccache --zero-stats
-      - run: cd platforms/android && ./gradlew demo:assembleDebug -Ptangram.abis=armeabi-v7a -Ptangram.ccache=true
+      - run: cd platforms/android && ./gradlew demo:assembleDebug -Ptangram.abis=arm64-v8a -Ptangram.ccache=true
       - run: ccache --show-stats
       - save_cache:
           key: android-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
