--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,8 @@ jobs:
           -DTANGRAM_USE_SYSTEM_GLFW_LIBS=1 \
           -DTANGRAM_BUILD_TESTS=1 \
           -DTANGRAM_BUILD_BENCHMARKS=1 \
-          -DCMAKE_CXX_COMPILER_LAUNCHER=ccache 
+          -DCMAKE_C_COMPILER_LAUNCHER=ccache \
+          -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
       - run: ninja -C build/linux -j 4
       - run: ccache --show-stats
       - save_cache:
@@ -150,7 +151,7 @@ jobs:
             - macos-ccache-v1
       - run: ccache --zero-stats
       # Build the MacOS demo app and package it into demo.zip
-      - run: make osx MACOSX_DEPLOYMENT_TARGET=10.10.0 BUILD_TYPE=Debug CMAKE_OPTIONS="-DCMAKE_CXX_COMPILER_LAUNCHER=ccache -GNinja"
+      - run: make osx MACOSX_DEPLOYMENT_TARGET=10.10.0 BUILD_TYPE=Debug CMAKE_OPTIONS="-DCMAKE_C_COMPILER_LAUNCHER=ccache -DCMAKE_CXX_COMPILER_LAUNCHER=ccache -GNinja"
       - run: ccache --show-stats
       - save_cache:
           key: macos-ccache-v1-{{ .Branch }}-{{ .Environment.CIRCLE_SHA1 }}
