--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -1,6 +1,11 @@
 project(tangram-core)
 
 # Build core library dependencies.
+if (WIN32)
+  find_package(yaml-cpp CONFIG REQUIRED)
+  find_package(ZLIB REQUIRED)
+endif()
+
 add_subdirectory(deps)
 
 add_library(tangram-core
@@ -222,6 +227,13 @@ target_include_directories(tangram-core
   deps/double-conversion/include
 )
 
+if (WIN32)
+  set(ZLIB_NAME ZLIB::ZLIB)
+  target_compile_definitions(tangram-core PUBLIC _USE_MATH_DEFINES)
+else()
+  set(ZLIB_NAME z)
+endif()
+
 # Link core library dependencies.
 target_link_libraries(tangram-core
   PRIVATE
@@ -231,7 +243,7 @@ target_link_libraries(tangram-core
   alfons
   double-conversion
   miniz
-  z
+  ${ZLIB_NAME}
 )
 
 # Add JavaScript implementation.
