--- a/core/deps/CMakeLists.txt
+++ b/core/deps/CMakeLists.txt
@@ -19,13 +19,10 @@ target_include_directories(css-color-parser-cpp PUBLIC css-color-parser-cpp)
 if(NOT TANGRAM_USE_SYSTEM_FONT_LIBS)
   ## Harfbuzz - ICU-Common - Freetype2 ##
   #######################################
+  #find_package(ICU REQUIRED COMPONENTS common)
   find_package(harfbuzz CONFIG REQUIRED)
-
-  message(STATUS "harfbuzz" ${HARFBUZZ_LIBRARIES})
-
   set(ALFONS_DEPS_LIBRARIES
-    ${ALFONS_DEPS_LIBRARIES}
-    harfbuzz ${HARFBUZZ_LIBRARIES}
+    harfbuzz::harfbuzz
     CACHE INTERNAL "alfons-libs" FORCE)
 endif()
 
@@ -34,11 +31,7 @@ endif()
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/alfons)
 target_compile_definitions(alfons PRIVATE GLM_FORCE_CTOR_INIT)
 
-if (TANGRAM_MBTILES_DATASOURCE)
-  ## SQLiteCpp ##
-  ###############
-  find_package(SQLiteCpp CONFIG REQUIRED)
-endif()
+
 
 ## double-conversion ##
 #######################
